[gd_scene load_steps=8 format=3 uid="uid://byrhd5dr742yc"]

[ext_resource type="PackedScene" uid="uid://x6ey6hxdu7fj" path="res://Core/Art/Bounce_Bud.glb" id="1_f3pn1"]
[ext_resource type="Script" path="res://Core/bounce_bud.gd" id="1_sn1yh"]
[ext_resource type="PackedScene" uid="uid://c5jwnotrdurj5" path="res://Core/Art/GrassBlade_Collection_1.glb" id="3_3d8ug"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7m6ee"]
radius = 0.873932

[sub_resource type="Animation" id="Animation_3jlkc"]
resource_name = "Boing"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bounce_Bud/Stem:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.375, 0.6, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.8, 1), Vector3(1, 1.05, 1), Vector3(1, 0.85, 1), Vector3(1, 1, 1), Vector3(1.063, 0.85, 1.063)]
}

[sub_resource type="Animation" id="Animation_iynav"]
resource_name = "Shrink"
length = 0.6
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bounce_Bud/Stem:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.7, 1), Vector3(1.063, 0.85, 1.063)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u4xga"]
_data = {
"Boing": SubResource("Animation_3jlkc"),
"Shrink": SubResource("Animation_iynav")
}

[node name="BounceBud" type="Area3D" groups=["BounceBud", "Checkpoint"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_sn1yh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.600774, 0)
shape = SubResource("CylinderShape3D_7m6ee")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u4xga")
}

[node name="Bounce_Bud" parent="." instance=ExtResource("1_f3pn1")]
transform = Transform3D(0.6, 0, 0, 0, 1, 0, 0, 0, 0.6, 0, -1.58486, 0)

[node name="Deco" type="Node3D" parent="."]

[node name="GrassBlade_Collection_12" parent="Deco" instance=ExtResource("3_3d8ug")]
transform = Transform3D(0.546986, 0, 0, 0, 0.531877, -0.127673, 0, 0.127673, 0.531877, 0, -6.06303, 0.18112)

[node name="GrassBlade_Collection_13" parent="Deco" instance=ExtResource("3_3d8ug")]
transform = Transform3D(-0.292624, 0.14351, -0.510791, 0, 0.583328, 0.163889, 0.530568, 0.0791497, -0.281716, -1.29196, -6.68376, -1.31405)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Bounce_Bud"]
